--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
-    <title>emilyvall.github.io</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Emily's personal web site at SHSU">
+    <meta name="Keywords" content="Emily Valladares, SHSU, management information systems">
+    <title>Emily Valladares at SHSU</title>
 </head>
-
 <body>
-    <h1>Welcome to my web site</h1>
+    <header>
+        <img src="images/emily.jpg" alt="Emily's picture" width="100" height="100">
+    </header>
+    <main>
+        <h1>Welcome to my web site!</h1>
+        <h2>emilyvall.github.io</h2>
+        <h3>lorem100</h3>
+        <nav>
+            <ul>
+                <li>Education</li>
+                <li>Work Experience</li>
+                <li>Knowledge and Skills</li>
+                <li>Certifications</li>
+                <li><a href="#">Class Projects</a></li>
+            </ul>
+        </nav>
+        
+    </main>  
 </body>
 </html>
