--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Emily's personal web site at SHSU">
-    <meta name="Keywords" content="Emily Valladares, SHSU, management information systems">
+    <meta name="keywords" content="Emily, Valladares, SHSU, management information systems">
     <title>Emily Valladares at SHSU</title>
 </head>
 <body>
     <header>
-        <img src="images/emily.jpg" alt="Emily's picture" width="100" height="100">
+        <img src="Image/emily.jpg" alt="Emily's picture" width="100" height="100">
     </header>
     <main>
         <h1>Welcome to my web site!</h1>
         <h2>emilyvall.github.io</h2>
-        <h3>lorem100</h3>
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laudantium iure suscipit tempore odit dolore quibusdam, sunt excepturi voluptates quod vitae odio distinctio magni sed aperiam ab minima quia eveniet nam corrupti officiis. Aspernatur cumque ab nisi voluptatum minima quam, esse, voluptatem blanditiis excepturi possimus repellat id eos, magnam inventore.</h3>
         <nav>
             <ul>
                 <li>Education</li>
@@ -24,7 +24,14 @@
                 <li><a href="#">Class Projects</a></li>
             </ul>
         </nav>
-        
-    </main>  
+        <p>CLick here to dowload <a href="files/resume.pdf">my resume</a></p>
+        <p>Click here to go to <a href="https://www.linkedin.com" target="_blank">my LinkedIn profile</a></p>
+        <p>Contract me at <a href="mailto:emilyy0208@gmail.com"><em>emilyy0208@gmail.com</em></a> for any questions</p>
+    </main>
+    <br>
+    <hr>
+    <footer>
+        <p>&copy; 2024 Emily Valladares</p>
+    </footer>
 </body>
 </html>
