--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta name="description" content="Emily's personal web site at SHSU">
     <meta name="keywords" content="Emily, Valladares, SHSU, management information systems">
     <title>Emily Valladares at SHSU</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <header>
         <img src="Image/emily.jpg" alt="Emily's picture" width="100" height="100">
+        <h1 class="shadow">Welcome to my web site!</h1>
+        <h2 class="shadow">emilyvall.github.io</h2>
     </header>
     <main>
-        <h1>Welcome to my web site!</h1>
-        <h2>emilyvall.github.io</h2>
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem laudantium iure suscipit tempore odit dolore quibusdam, sunt excepturi voluptates quod vitae odio distinctio magni sed aperiam ab minima quia eveniet nam corrupti officiis. Aspernatur cumque ab nisi voluptatum minima quam, esse, voluptatem blanditiis excepturi possimus repellat id eos, magnam inventore.</h3>
         <nav>
-            <ul>
+            <ul id="list">
                 <li>Education</li>
                 <li>Work Experience</li>
                 <li>Knowledge and Skills</li>
@@ -31,7 +32,7 @@
     <br>
     <hr>
     <footer>
-        <p>&copy; 2024 Emily Valladares</p>
+        <p class="copyright">&copy; 2024 Emily Valladares</p>
     </footer>
 </body>
 </html>
