--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
                 <li><a href="#">Class Projects</a></li>
             </ul>
         </nav>
-        <p>CLick here to dowload <a href="files/resume.pdf">my resume</a></p>
-        <p>Click here to go to <a href="https://www.linkedin.com" target="_blank">my LinkedIn profile</a></p>
-        <p>Contract me at <a href="mailto:emilyy0208@gmail.com"><em>emilyy0208@gmail.com</em></a> for any questions</p>
+        <div class="contact">
+            <p>CLick here to dowload <a href="files/resume.pdf">my resume</a></p>
+            <p>Click here to go to <a href="https://www.linkedin.com" target="_blank">my LinkedIn profile</a></p>
+            <p>Contract me at <a href="mailto:emilyy0208@gmail.com"><em>emilyy0208@gmail.com</em></a> for any questions</p>
+        </div>
     </main>
     <br>
     <hr>
