--- a/project4.html
+++ b/project4.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Emily's personal web site at SHSU">
     <meta name="keywords" content="Emily, Valladares, SHSU, management information systems">
     <title>Emily Valladares at SHSU | Projects </title>
-    <link rel="stylesheet" href="styles/project4.css">
+    <link rel="stylesheet" href="styles/project.css">
 </head>
 <body>
     <header>
