--- a/project4.html
+++ b/project4.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header>
-        <img src="Image/emily.jpg" alt="Emily's picture" width="100" height="100">
+        <img src="images/emily.jpg" alt="Emily's picture" width="100" height="100">
         <h1 class="shadow">Welcome to my web site!</h1>
         <h2 class="shadow">emilyvall.github.io</h2>
     </header>
     <article>
         <h3>MGIS 3320: Web site development project</h3>
-        <img src="images/jupiter.jpg" alt="Jupiter" title="Jupiter" width="150">
+        <img src="images/sunset.jpg" alt="Sunset" title="Sunset" width="150">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam modi error voluptatibus nostrum, laboriosam illum tempora aspernatur quasi fuga soluta quaerat, hic ea sunt distinctio tenetur accusamus minus, voluptatem quis unde facilis accusantium! Doloremque, quam quas! Perspiciatis voluptate officiis iste! Ratione laboriosam, vel amet dolore maxime nobis ullam. Doloremque quia obcaecati sint amet maiores veniam, officia minus debitis voluptatum unde nemo, dolore voluptas, voluptatem at molestiae quas in sunt eius earum nulla odit delectus dolorum dignissimos. Rem voluptate deleniti assumenda, ea unde eaque sit magni impedit. Odio sit veniam ex accusamus perferendis quidem ratione voluptas vitae quia quos expedita assumenda, maxime distinctio, repudiandae possimus enim dolorum, ut quaerat laborum corporis natus pariatur. Laborum deserunt provident asperiores consequatur veniam suscipit quia sint assumenda quam sequi, tempore dicta modi dolore tempora porro non facilis molestias fugit ipsam nulla quae soluta! Voluptas excepturi, quo alias consectetur repudiandae nisi repellat illum. Dolore voluptatem eaque, beatae iusto nam cumque dolorum, at facilis suscipit blanditiis maxime, rerum quod praesentium quia temporibus fuga adipisci libero? Enim dolore illum laborum sed, iusto asperiores, ipsa labore ut temporibus similique nemo atque earum maxime, beatae at harum quas dolores laboriosam? Nulla, ex odit fuga exercitationem numquam minus cum quaerat!</p>
     </article>
     <aside>
