--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Valladares' Research</title>
-    <link rel="stylesheet" href="styles/menu4.css">
+    <link rel="stylesheet" href="styles/menu.css">
 </head>
 <body>
     <nav id="nav_menu">
@@ -35,6 +35,10 @@
             <li><a href="#intro">Introduction</a></li>
             <li><a href="#background">Background</a></li>
             <li><a href="#method">Method</a></li>
+                <ul>
+                    <li>Analysis</li>
+                    <li>Results</li>
+                </ul>
             <li><a href="#discussion">Discussion</a></li>  
         </ol>
     </aside>
