--- a/menu.html
+++ b/menu.html
@@ -42,5 +42,6 @@
             <li><a href="#discussion">Discussion</a></li>  
         </ol>
     </aside>
+    <p><a href="#">Return to the top of the page</a></p>
 </body>
 </html>
