--- a/exam.html
+++ b/exam.html
@@ -43,15 +43,17 @@
     </article>
 
     <aside>
-        <ul>
+        <ol>
             <li><a href="#Introduction">Introduction</a></li>
             <li><a href="#Background">Background</a></li>
             <li><a href="#Method">Method</a></li>
-            <li><a href="#Analysis">Analysis</a></li>
-            <li><a href="#Results">Results</a></li>
+            <ul>
+                <li>Analysis</li>
+                <li>Results</li>
+            </ul>
             <li><a href="#Discussion">Discussion</a></li>
             <li><a href="#top">Back to Top</a></li>
-        </ul>
+        </ol>
     </aside>
 
     <footer>
