--- a/exam.html
+++ b/exam.html
@@ -52,8 +52,9 @@
                 <li>Results</li>
             </ul>
             <li><a href="#Discussion">Discussion</a></li>
-            <li><a href="#top">Back to Top</a></li>
+
         </ol>
+        <a href="https://emilyvall.github.io"> Return to the top of page</a>
     </aside>
 
     <footer>
