--- a/exam.html
+++ b/exam.html
@@ -48,13 +48,13 @@
             <li><a href="#Background">Background</a></li>
             <li><a href="#Method">Method</a></li>
             <ul>
-                <li>Analysis</li>
-                <li>Results</li>
+                <li><a href="#Analysis">Analysis</a></li>
+                <li><a href="#Results">Results</a></li>
             </ul>
             <li><a href="#Discussion">Discussion</a></li>
 
         </ol>
-        <a href="https://emilyvall.github.io"> Return to the top of page</a>
+        <a href="https://emilyvall.github.io/exam.html"> Return to the top of page</a>
     </aside>
 
     <footer>
