--- a/exam.html
+++ b/exam.html
@@ -42,7 +42,7 @@
 
     </article>
 
-    <aside>
+    <aside id="fixed-aside">
         <ol>
             <li><a href="#Introduction">Introduction</a></li>
             <li><a href="#Background">Background</a></li>
