--- a/exam.html
+++ b/exam.html
@@ -59,7 +59,7 @@
     </aside>
 
     <footer>
-        <p class="copyright">&copy; 2024 Emily Valladares "https://www.linkedin.com/in/emily-valladares-58821a226" target="_blank">LinkedIn </p>
+        <p class="copyright">&copy; 2024 Emily Valladares </p>
         <a href="https://www.linkedin.com/in/emily-valladares-58821a226" target="_blank">LinkedIn</a>
     </footer>
 
