--- a/table4.html
+++ b/table4.html
@@ -49,6 +49,9 @@
             <td rowspan="3">50-80k</td>
         </tr>
         <tr>
+            <td>System Analyst</td>
+        </tr>
+        <tr>
             <td>Data Analyst</td>
         </tr>
         <tr>
@@ -60,5 +63,29 @@
             <td>Web Developer</td>
         </tr>
     </table>
+    <br>
+    <br>
+    <table class="third">
+        <thead>
+            <tr>
+                <th colspan="3">Table 3: IT Jobs and Salaries</th>
+            </tr>
+            <tr>
+                <th>category</th>
+                <th>Job</th>
+                <th>Salary</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1.</td>
+                <td>Support Technician</td>
+                <td>40-50k</td>
+            </tr>
+            <tr>
+                <td rowspan="3"
+            </tr>
+        </tbody>
+
 </body>
 </html>
