--- a/table4.html
+++ b/table4.html
@@ -33,6 +33,7 @@
     <br><br>
     <table class="second">
         <caption> Table 2: IT JObs and Salaries</caption>
+        </tr>   
         <tr>
             <th></th>
             <th>Job</th>
@@ -44,8 +45,8 @@
             <td>40-50k</td>
         </tr>
         <tr>
-            <td rowspan="3">50-80k</td>
-            <td>Business Analyst</td>
+            <td rowspan="3">2.</td>
+            <td>Business Analyst</td>            
             <td rowspan="3">50-80k</td>
         </tr>
         <tr>
@@ -66,26 +67,43 @@
     <br>
     <br>
     <table class="third">
+        <caption>TABLE 3: IT Jobs and Salaries</caption>
         <thead>
             <tr>
-                <th colspan="3">Table 3: IT Jobs and Salaries</th>
+                <th colspan="3">TABLE 3: IT Jobs and Salaries</th>
             </tr>
             <tr>
-                <th>category</th>
+                <th>Category</th>
                 <th>Job</th>
                 <th>Salary</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>1.</td>
-                <td>Support Technician</td>
-                <td>40-50k</td>
+                <td rowspan="2">Technical</td>
+                <td>Network Administrator</td>
+                <td>60-80k</td>
             </tr>
             <tr>
-                <td rowspan="3"
+                <td>Security Analyst</td>
+                <td>70-100k</td>
+            </tr>
+            <tr>
+                <td rowspan="3">Management</td>
+                <td>IT Manager</td>
+                <td>80-120k</td>
+            </tr>
+            <tr>
+                <td>Project Manager</td>
+                <td>90-130k</td>
+            </tr>
+            <tr>
+                <td>CTO (Chief Technology Officer)</td>
+                <td>120-200k</td>
             </tr>
         </tbody>
+    </table>
+    
 
 </body>
 </html>
