--- a/table4.html
+++ b/table4.html
@@ -80,26 +80,28 @@
         </thead>
         <tbody>
             <tr>
-                <td rowspan="2">Technical</td>
-                <td>Network Administrator</td>
-                <td>60-80k</td>
+                <td>1.</td>
+                <td>Support Technician</td>
+                <td>40-50k</td>
             </tr>
             <tr>
-                <td>Security Analyst</td>
-                <td>70-100k</td>
+                <td rowspan="3">2.</td>
+                <td>Business Analyst</td>            
+                <td rowspan="3">50-80k</td>
             </tr>
             <tr>
-                <td rowspan="3">Management</td>
-                <td>IT Manager</td>
-                <td>80-120k</td>
+                <td>System Analyst</td>
             </tr>
             <tr>
-                <td>Project Manager</td>
-                <td>90-130k</td>
+                <td>Data Analyst</td>
             </tr>
             <tr>
-                <td>CTO (Chief Technology Officer)</td>
-                <td>120-200k</td>
+                <td rowspan="2">3.</td>
+                <td>Software Developer</td>
+                <td rowspan="2">60-90k</td>
+            </tr>
+            <tr>
+                <td>Web Developer</td>
             </tr>
         </tbody>
     </table>
