--- a/table4.html
+++ b/table4.html
@@ -67,9 +67,12 @@
     <br>
     <br>
     <table class="third">
-        <caption>TABLE 3: IT Jobs and Salaries</caption>
+        <tr>
+            <th colspan="3">TABLE 3: IT Jobs and Salaries</th>
+        </tr>
+    
         <thead>
-            
+
             <tr>
                 <th>Category</th>
                 <th>Job</th>
