--- a/table4.html
+++ b/table4.html
@@ -67,9 +67,8 @@
     <br>
     <br>
     <table class="third">
-        <tr>
-            <th colspan="3">TABLE 3: IT Jobs and Salaries</th>
-        </tr>
+        <caption>TABLE 3: IT Jobs and Salaries</caption>
+       
     
         <thead>
 
