--- a/rwd.html
+++ b/rwd.html
@@ -30,7 +30,7 @@
     </article>
 
     <footer>
-        <p>&copy; 2024 Emily Valladares>
+        <p>&copy; 2024 Emily Valladares
         <p><a href="https://www.linkedin.com/in/emily-valladares-58821a226/" target="_blank">LinkedIn</a></p>
     </footer>
  </body>
