--- a/rwd.html
+++ b/rwd.html
@@ -17,7 +17,7 @@
         </label>
         <ul class="menu">
             <li><a href="rwd.html" class="current">Home</a></li>
-            <li><a href="Resume" target="_blank">resume</a></li><li>
+            <li><a href="https://www.linkedin.com/in/emily-valladares-58821a226/" target="_blank">Resume</a></li><li>
             <li><a href="project4.html">Projects</a></li>
             <li><a href="#">Experiences</a></li>
             <li><a href="#">Contact Me</a></li>
