--- a/form.html
+++ b/form.html
@@ -87,7 +87,7 @@
         <fieldset>
             <legend>Submit Your Membership</legend>
             <input type="submit" value="Submit">
-            <input type="reset" value="Reset">
+            <input type="reset_fields" value="Reset_Fields">
         </fieldset>
     </form>
 </body>
