--- a/form.html
+++ b/form.html
@@ -84,11 +84,12 @@
         </fieldset>
 
        
-        <fieldset>
-            <legend>Submit Your Membership</legend>
-            <input type="submit" value="Submit">
-            <input type="reset" value="Reset>
-        </fieldset>
-    </form>
+      
+<fieldset>
+    <legend>Submit Your Membership</legend>
+    <input type="submit" value="Submit">
+    <input type="reset" value="Reset">
+</fieldset>
+</form>
 </body>
 </html>
